# rOSt

./: .gitignore  Cargo.toml  Makefile.toml  README.md  armv4t-none-eabi.json  asm.s  build.rs  kernel  kernel.lds  led.c  memory.x
.cargo/: config
api/: Cargo.toml
api/src/: lib.rs  syscalls.rs
exercises/: task1.md  task2.md  task3.md  task4.md  task5.md
macros/: Cargo.toml
macros/src/: lib.rs
src/: allocator.rs  dbgu.rs  exception_handlers.rs  exceptions.rs  fmt.rs  helpers.rs  interrupt_controller.rs  interrupt_handler.rs  interrupt_handlers.rs  logger.rs  main.rs  memory.rs  processor.rs  syscall_handlers.rs  syscalls.rs  system_timer.rs  threads.rs  user_tasks.rs
usercode/: Cargo.toml  memory.x
usercode/src/: main.rs
usercode_c/: build.sh
usercode_c/src/: main.c  test.c
usercode_rust/: Cargo.toml  memory.x
usercode_rust/src/: main.rs
