cargo-features = ["strip", "named-profiles"]

[package]
authors = ["Karl Skomski <karl@skomski.com>", "Corin Baurmann <corin.baurmann@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "rost"
version = "0.1.0"

[dependencies]
arrayvec = { version = "0.5", default-features = false, features = ["unstable-const-fn"]}
linked_list_allocator = { version = "0.8", default-features = false, features = ["const_mut_refs"]}
log = { git = "https://github.com/skomski/log", default-features = false}
rand =  { version = "0.8.2", default-features = false}
rand_pcg = "0.3"
rost-macros = { path = "macros", version = "=0.1.0" }
rost-api = { path = "api", version = "=0.1.0" }
num_enum = {version = "0.5", default-features = false }

[build-dependencies]
cc = "1"

# this lets you use `cargo fix`!
[[bin]]
name = "rost"
test = false
bench = false

[profile.release]
codegen-units = 1
debug = true # symbols are nice
lto = true # link-time-optimization
panic = "abort" # disable stack unwinding on panic

[profile.release-opt-size]
inherits = "release"
debug = false
strip = "symbols"
opt-level = 'z'

[profile.dev]
panic = "abort" # disable stack unwinding on panic
