[package]
authors = ["Karl Skomski <karl@skomski.com>", "Corin Baurmann <corin.baurmann@gmail.com>"]
categories = ["embedded", "no-std"]
description = "usercode example rOSt"
license = "unlicense"
name = "rost-user"
version = "0.1.0"
edition = "2018"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
rost-api = { path = "../api", version = "=0.1.0" }
rand =  { version = "0.8.2", default-features = false}
rand_pcg = "0.3"